2007-12-10  Andrew Jaquith <andrew AT apache DOT org>

        * 2.6.1 RC3
        
        * Fixed Ant script compatibility issue reported in [JSPWIKI-109].
        JSPWiki's 'war-tomcat'  and 'webtests' tasks now work correctly
        when running under Tomcat 5.5 *and* 6.0. 
        
2007-12-05  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.6.0 RC2

        * Changed versioning scheme

2007-12-16  Christoph Sauer <sauer@hs-heilbronn.de>

        * 2.6.2 RC1

        * [JSPWIKI-101]: Fixed, TOC plugin did not call filter

        * Improved MissingTranslations utility, now outputs sorted list
          of diff properties.

        * Added missing german translations

2007-12-10  Andrew Jaquith <andrew AT apache DOT org>

        * 2.6.1 RC1

        * Ripped-and-replaced web unit tests and replaced with Selenium.
        Selenium test directory structure replaced with a patched
        selenium-server-0.9.2.jar. Web tests are yet not at parity
        with old (failing) JWebUnit tests, they are pretty good for
        a start. Many thanks to Dirk to figuring out the minor patches
        we needed to get Selenium to work nicely with Mootools.

        * Removed all traces of JMeter, HttpUnit and JWebUnit
        (as much as I could find, anyway).

        * Re-based Selenium tests to tests/etc/selenium/tests.

        * If you want to try developing your own web tests, check out
        Selenium IDE, a FireFox plugin that records user actions
        and generates tests scripts.

2007-12-05  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.6.0 RC1

        * [JSPWIKI-55]: Added patch from David Au to fix pages
        with spaces.

        * [JSPWIKI-62]: Added patch from David Au to fix ShortURLConstructor
        and plain.jsp.

2007-12-10  Dirk Frederickx (dirk.frederickx@gmail.com)

        * Added selenium-core (selenium.core.version=0.8.3, selenium.core.revision=1879)
        with few patches for mootools compatibility.